[tool.poetry]
name = "ece421"
version = "0.1.0"
description = "ece421 brain sim packages"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
matplotlib = "^3.6.0"
mpmath = "^1.2.1"
setuptools = "^65.3.0"
setuptools-scm = "^7.0.5"
mock = "^4.0.3"
nose = "^1.3.7"
Brian2 = "2.3"
neurodynex3 = "^1.0.3"
jupyter = "^1.0.0"
hatchling = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
